[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypanuclei_rivalsec"
version = "0.0.4"
authors = [
  { name="Vladimir Sopernikov" },
]
description = "pypanuclei (Python Passive Nuclei), it's a replace for nuclei passive scanner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rivalsec/pypanuclei"
"Bug Tracker" = "https://github.com/rivalsec/pypanuclei/issues"

[project.scripts]
pypanuclei = "pypanuclei_rivalsec.pypanuclei:cli"